--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 numpy
-pandas==0.23.4
+pandas==1.5.2
 scikit_learn==0.20.3
 joblib==0.13.2
 sqlalchemy
 mysql-connector-python
 jupyter
+Scipy==1.5.0.  ## Added in Feature1
