--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     volumes: 
       - ./AppPython/:/AppPython
     ports:
-      - "1234:1234"
+      - "1235:1235"    ###### Added in Feature2
     command: jupyter notebook --no-browser --ip=0.0.0.0 --port=1234 --allow-root
     depends_on:
       - mysql
